--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "ios": "react-native run-ios",
     "start": "react-native start",
     "test": "jest",
-    "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
+    "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
+    "icons": "react-native link react-native-vector-icons"
   },
   "dependencies": {
     "@react-native-masked-view/masked-view": "^0.2.6",
@@ -21,6 +22,8 @@
     "axios": "^0.25.0",
     "react": "17.0.2",
     "react-native": "0.65.1",
+    "react-native-animated-searchbar": "^1.0.0",
+    "react-native-animated-searchbox": "^0.0.1",
     "react-native-elements": "^3.4.2",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-pager-view": "^5.4.4",
@@ -28,6 +31,7 @@
     "react-native-reanimated": "2.3.0-alpha.3",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.7.2",
+    "react-native-svg": "^12.1.1",
     "react-native-tab-view": "^3.1.1",
     "react-native-vector-icons": "^8.1.0"
   },
